# alexandra-ml-template

./: .editorconfig  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.directory_name}}/: Makefile  pyproject.toml
{{cookiecutter.directory_name}}/src/: process.py  train_model.py
{{cookiecutter.package_name}}/: .envs  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  makefile  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: ci.yaml  ci.yml  docs.yaml
{{cookiecutter.package_name}}/config/: config.yaml
{{cookiecutter.package_name}}/src/scripts/: fix_dot_env_file.py  set_up_python_version.py  versioning.py
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py  demo.py
{{cookiecutter.project_name}}/: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .markdownlint.jsonc  .name_and_email  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  dependabot.yaml  docker-compose.yml  makefile  mkdocs.yaml  pre-commit-config.yaml  pyproject.toml  {{'.pre-commit-config.yaml' if cookiecutter.license-checker == 'n'}}  {{'.pre-commit-config.yaml' if cookiecutter.license_checker == 'y'}}  {{'.prettier.config.js' if cookiecutter.include_frontend == 'y'}}  {{'CODE_OF_CONDUCT.md' if cookiecutter.open_source == 'y'}}  {{'CONTRIBUTING.md' if cookiecutter.open_source == 'y'}}  {{'Dockerfile' if cookiecutter.include_frontend != 'y'}}  {{'Dockerfile.backend' if cookiecutter.include_frontend == 'y'}}  {{'Dockerfile.frontend' if cookiecutter.include_frontend == 'y'}}  {{'SECURITY.md' if cookiecutter.open_source == 'y'}}  {{'docker-compose.nginx.conf' if cookiecutter.include_frontend == 'y'}}  {{'docker-compose.yaml' if cookiecutter.include_frontend == 'y' or cookiecutter.include_database == 'y'}}  {{'docker-compose.yaml' if cookiecutter.include_frontend == 'y'}}  {{'eslint.config.js' if cookiecutter.include_frontend == 'y'}}  {{'index.html' if cookiecutter.include_frontend == 'y'}}  {{'package.json' if cookiecutter.include_frontend == 'y'}}  {{'tsconfig.json' if cookiecutter.include_frontend == 'y'}}  {{'vite.config.ts' if cookiecutter.include_frontend == 'y'}}
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_name}}/.github/workflows/: ci.yaml  ci.yml  docs.yaml  {{'docs.yaml' if cookiecutter.open_source == 'y' else ''}}
{{cookiecutter.project_name}}/config/: __init__.py  config.yaml
{{cookiecutter.project_name}}/config/hydra/job_logging/: custom.yaml
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_name}}/src/: nodered_dockerfile  preprocessor_dockerfile
{{cookiecutter.project_name}}/src/frontend/: App.vue  main.ts
{{cookiecutter.project_name}}/src/frontend/views/: LandingPageView.vue
{{cookiecutter.project_name}}/src/grafana/: example_dashboard.json
{{cookiecutter.project_name}}/src/grafana/datasources/: example_datasource_provisioning.yaml
{{cookiecutter.project_name}}/src/nodered/: example_ml_inference.json
{{cookiecutter.project_name}}/src/preprocessor/: app.py  pyproject.toml
{{cookiecutter.project_name}}/src/scripts/: eval_model.py  fix_dot_env_file.py  main.py  setup_python_version.py  train_model.py  versioning.py  your_script.py  {{'' if cookiecutter.dependency_manager != 'pip' else 'freeze_dependencies.py'}}
{{cookiecutter.project_name}}/src/sql/: example_views.sql
{{cookiecutter.project_name}}/src/{{'frontend' if cookiecutter.include_frontend}}/: vite-env.d.ts
{{cookiecutter.project_name}}/src/{{'frontend' if cookiecutter.include_frontend}}/routes/: index.ts
{{cookiecutter.project_name}}/src/{{cookiecutter.library_name}}/: __init__.py  your_module.py
{{cookiecutter.project_name}}/src/{{cookiecutter.library_name}}/ml_tools/: datasets.py  models.py  traintest.py
{{cookiecutter.project_name}}/src/{{cookiecutter.library_name}}/utils/: sql.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name}}/: __init__.py  module.py  your_module.py  {{'api.py' if cookiecutter.include_frontend == 'y'}}
{{cookiecutter.project_name}}/tests/: __init__.py  test_datasets.py  test_dummy.py  test_models.py  test_module.py
