[project]
name = "{{cookiecutter.project_name}}"
version = "0.0.0"
description = "{{cookiecutter.project_description}}"
readme = "README.md"
authors = [
    {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.email}}"},
]
maintainers = [
    {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.email}}"},
]
requires-python = ">={{ cookiecutter.python_version }},<4.0"
dependencies = [
    "hydra-core>={{ cookiecutter._hydra_version }}",
]

[project.urls]
Repository = "https://github.com/alexandrainst/{{cookiecutter.project_name}}"
Issues = "https://github.com/alexandrainst/{{cookiecutter.project_name}}/issues"

[project.license]
{% if cookiecutter.open_source != 'y' -%}
text = "Proprietary"

{% else -%}
file = "LICENSE"

{% endif -%}

[tool.uv]
dev-dependencies = [
    "pytest>={{ cookiecutter._pytest_version }}",
    "pytest-cov>={{ cookiecutter._pytest_cov_version }}",
    "pre-commit>={{ cookiecutter._pre_commit_version }}",
    "readme-coverage-badger>={{ cookiecutter._readme_coverage_badger_version }}",
    "click>={{ cookiecutter._click_version }}",
    "ruff>={{ cookiecutter._ruff_version }}",
    "mypy>={{ cookiecutter._mypy_version }}",
    "nbstripout>={{ cookiecutter._nbstripout_version }}",
    "coverage>={{ cookiecutter._coverage_version }}",
    "mkdocs-material>={{ cookiecutter._mkdocs_material_version }}",
    "mkdocs-include-markdown-plugin>={{ cookiecutter._mkdocs_plugin_include_markdown_version }}",
    "mkdocs-include-dir-to-nav>={{ cookiecutter._mkdocs_plugin_include_dir_to_nav_version }}",
    "mkapi>={{ cookiecutter._mkdocs_plugin_mkapi_version }}",
    "pip>={{ cookiecutter._pip_version }}",
]

[tool.ruff]
{% if cookiecutter.python_version == '3.13' -%}
target-version = "py313"
{% elif cookiecutter.python_version == '3.12' -%}
target-version = "py312"
{% elif cookiecutter.python_version == '3.11' -%}
target-version = "py311"
{% elif cookiecutter.python_version == '3.10' -%}
target-version = "py310"
{% elif cookiecutter.python_version == '3.9' -%}
target-version = "py39"
{% elif cookiecutter.python_version == '3.8' -%}
target-version = "py38"
{% elif cookiecutter.python_version == '3.7' -%}
target-version = "py37"
{% elif cookiecutter.python_version == '3.6' -%}
target-version = "py36"
{% endif -%}
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]
extend-include = [
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-select = [
    "I",
    "D",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "F401",
]
"src/scripts/main.py" = [
    "I",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    '--durations=10',
    '--color=yes',
    '--doctest-modules',
    '--cov=src/{{cookiecutter.project_name}}',
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
    "ignore::ResourceWarning",
    "ignore::FutureWarning",
]
log_cli_level = "info"
testpaths = [
    "tests",
    "src/{{cookiecutter.project_name}}",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
