[project]
name = "iotml"
description = "whatever"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "aiofiles==23.2.1",
    "aiohttp==3.9.0",
    "aiokafka==0.8.1",
    "aiosignal==1.3.1",
    "alembic==1.12.1",
    "annotated-types==0.6.0",
    "ansible==8.5.0",
    "ansible-core==2.15.8",
    "ansible-runner==2.3.4",
    "antlr4-python3-runtime==4.9.3",
    "anyio==3.7.1",
    "asttokens==2.4.1",
    "async-timeout==4.0.3",
    "attrs==23.1.0",
    "Brotli==1.1.0",
    "certifi==2023.7.22",
    "cffi==1.16.0",
    "cfgv==3.4.0",
    "charset-normalizer==3.3.2",
    "click==8.0.4",
    "cloudpickle==2.2.1",
    "colorama==0.4.6",
    "commonmark==0.9.1",
    "contourpy==1.2.0",
    "coverage==5.5",
    "cryptography==41.0.6",
    "cuda-python==12.3.0",
    "cycler==0.12.1",
    "databricks-cli==0.18.0",
    "decorator==5.1.1",
    "distlib==0.3.7",
    "docker==6.1.3",
    "docutils==0.20.1",
    "entrypoints==0.4",
    "execnet==2.0.2",
    "executing==2.0.1",
    "fastapi",
    "filelock==3.13.1",
    "Flask==2.2.5",
    "fonttools==4.44.0",
    "frozenlist==1.4.0",
    "fsspec==2023.10.0",
    "gevent==23.9.1",
    "geventhttpclient==2.0.2",
    "gitdb==4.0.11",
    "GitPython==3.1.40",
    "greenlet==3.0.1",
    "grpcio==1.59.2",
    "gunicorn==21.2.0",
    "h11==0.14.0",
    "hydra-core==1.3.2",
    "identify==2.5.31",
    "idna==3.4",
    "importlib-metadata==6.8.0",
    "importlib-resources==6.1.1",
    "iniconfig==2.0.0",
    "ipython==8.17.2",
    "itsdangerous==2.1.2",
    "jedi==0.19.1",
    "Jinja2==3.1.2",
    "joblib==1.3.2",
    "kafka-python==2.0.2",
    "kiwisolver==1.4.5",
    "lockfile==0.12.2",
    "Mako==1.2.4",
    "Markdown==3.5.1",
    "MarkupSafe==2.1.3",
    "matplotlib==3.8.1",
    "matplotlib-inline==0.1.6",
    "mlflow==2.9.2",
    "mlserver==1.3.5",
    "mpmath==1.3.0",
    "multidict==6.0.4",
    "networkx==3.2.1",
    "nodeenv==1.8.0",
    "numpy==1.26.1",
    "nvidia-cublas-cu12==12.1.3.1",
    "nvidia-cuda-cupti-cu12==12.1.105",
    "nvidia-cuda-nvrtc-cu12==12.1.105",
    "nvidia-cuda-runtime-cu12==12.1.105",
    "nvidia-cudnn-cu12==8.9.2.26",
    "nvidia-cufft-cu12==11.0.2.54",
    "nvidia-curand-cu12==10.3.2.106",
    "nvidia-cusolver-cu12==11.4.5.107",
    "nvidia-cusparse-cu12==12.1.0.106",
    "nvidia-nccl-cu12==2.18.1",
    "nvidia-nvjitlink-cu12==12.3.52",
    "nvidia-nvtx-cu12==12.1.105",
    "oauthlib==3.2.2",
    "omegaconf==2.3.0",
    "orjson==3.9.10",
    "packaging==23.2",
    "pandas==2.1.2",
    "parso==0.8.3",
    "pdoc==14.1.0",
    "pexpect==4.8.0",
    "Pillow==10.1.0",
    "platformdirs==3.11.0",
    "pluggy==1.3.0",
    "pre-commit==3.5.0",
    "prometheus-client==0.18.0",
    "prompt-toolkit==3.0.39",
    "protobuf==4.25.0",
    "psutil==5.9.6",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "py-grpc-prometheus==0.7.0",
    "pyarrow==14.0.1",
    "pycparser==2.21",
    "pydantic==1.10.13",
    "pydantic_core==2.10.1",
    "Pygments==2.16.1",
    "PyJWT==2.8.0",
    "pyparsing==3.1.1",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-xdist==3.3.1",
    "python-daemon==3.0.1",
    "python-dateutil==2.8.2",
    "python-dotenv==0.20.0",
    "python-rapidjson==1.13",
    "pytz==2023.3.post1",
    "PyYAML==6.0.1",
    "querystring-parser==1.2.4",
    "readme-coverage-badger==0.1.2",
    "requests==2.31.0",
    "resolvelib==1.0.1",
    "rich==12.6.0",
    "scikit-learn==1.3.2",
    "scipy==1.11.3",
    "semver==3.0.2",
    "setuptools==66.1.1",
    "shellingham==1.5.4",
    "six==1.16.0",
    "smmap==5.0.1",
    "sniffio==1.3.0",
    "SQLAlchemy==2.0.23",
    "sqlparse==0.4.4",
    "stack-data==0.6.3",
    "starlette",
    "starlette-exporter==0.16.0",
    "sympy==1.12",
    "tabulate==0.9.0",
    "threadpoolctl==3.2.0",
    "toml==0.10.2",
    "torch==2.1.0",
    "traitlets==5.13.0",
    "triton==2.1.0",
    "tritonclient==2.39.0",
    "typer==0.9.0",
    "types-PyYAML==6.0.12.12",
    "typing_extensions==4.8.0",
    "tzdata==2023.3",
    "urllib3==2.0.7",
    "uvicorn==0.24.0.post1",
    "uvloop==0.19.0",
    "virtualenv==20.24.6",
    "wcwidth==0.2.9",
    "websocket-client==1.6.4",
    "Werkzeug==3.0.1",
    "yarl==1.9.2",
    "zipp==3.17.0",
    "zope.event==5.0",
    "zope.interface==6.1",
]
[[project.authors]]
name = "Étienne Bourbeau"
email = "27770178+bourdeet@users.noreply.github.com"

[build-system]
requires = [
    "setuptools>=68.0.0",
]
build-backend = "setuptools.build_meta"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-xdist==3.3.1",
    "pytest-cov==4.1.0",
    "pre-commit==3.5.0",
    "pdoc==14.1.0",
    "coverage[toml]==5.5",
    "readme-coverage-badger==0.1.2",
    "click==8.1.7",
]

[tool.black]
line-length = 88
exclude = '''
/(
\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''

[tool.ruff]
target-version = "py311"
extend-select = [
    "I",
]

[tool.ruff.extend-per-file-ignores]
"__init__.py" = [
    "F401",
]
"src/scripts/your_script.py" = [
    "I",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--verbose",
    "--durations=10",
    "--color=yes",
    "-s",
    "-vv",
    "--doctest-modules",
    "--cov=src/iotml",
    "-n 2",
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::ImportWarning",
]
log_cli_level = "info"
testpaths = [
    "tests",
    "src/iotml",
]
