[project]
name = "{{cookiecutter.library_name}}_preprocessor"
description = "preprocessor pipeline"
version = "0.0.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi",
    "python-dotenv",
    "numpy==1.26.3",
    "requests==2.31.0",
    ]
[[project.authors]]
name = "{{cookiecutter.author_name}}"
email = "{{cookiecutter.email}}"

[build-system]
requires = [
    "setuptools>=68.0.0",
]
build-backend = "setuptools.build_meta"